# audible-series

./: .gitignore  README.md  pyproject.toml
audible_series/: cmd_series.py  configfile.py  seriesutil.py
examples/: example.config.yaml  output.txt
tests/: test_audible_series.py  test_seriesutil.py
