[tool.poetry]
name = "audible-series"
version = "0.1.0"
description = "Look for new series realeases in Audible"
authors = ["Alex Lusco <alex.lusco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
audible = "^0.5.4"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pylint = "^2.9.3"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."audible.cli_plugins"]
"series" = "audible_series.cmd_series:cli"
