[tool.poetry]
name = "audible-series"
version = "1.1.0"
description = "Adds a command to audible-cli that looks for new series releases in a user's library."
authors = ["Alex Lusco <alex.lusco@gmail.com>"]
homepage = "https://github.com/luscoma/audible-series"
repository = "https://github.com/luscoma/audible-series"
readme="README.md"
keywords = ["audible"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
audible = "^0.9.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
autopep8 = "^2.3.1"
pylint = "^3.2.5"
parameterized = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."audible.cli_plugins"]
"series" = "audible_series.cmd_series:cli"
